Spacing/Sizing Fixes

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -93,7 +93,7 @@ textarea {
 
 .input-container textarea {
   width: 430px;
-  resize: vertical;
+  resize: none;
 }
 
 .input-container input {
